--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -25,6 +25,7 @@
         background-color: #fff;
         margin: 50px auto;
         padding: 20px 40px;
+        //padding-left: 60px;
         h2{
             font-size: 30px;
             text-align: center;
@@ -33,10 +34,10 @@
         }
         .login-form{
             .login-form-button{
-                margin-left: 50px;
+                /* margin-left: 50px; */
                 background-color: green;
                 color: white;
-                width: 100%;
+                width:320px
             }
         }
     }
