--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -20,12 +20,12 @@
            text-align: center;
            position: relative;
            font-size: 15px;
-           &::after { //尾元素 向下的箭头
+           &::after { //伪元素 向下的箭头
                content: "";
                position: absolute;
                right: 50%;
                top: 100%;
-               transform: translateX(40%) ;
+               transform: translateX(50%) ;
                border-top: 20px solid #fff;
                border-right: 20px solid transparent;
                border-bottom: 20px solid transparent;
