--- a/src/components/link-button/index.less
+++ b/src/components/link-button/index.less
@@ -2,6 +2,6 @@
     background-color: transparent;
     border: none;
     outline: none;
-    color: #1da57a;
-    cursor: pointer;
+    color: #1890FF;
+    cursor: pointer;//放上去变成手
   }
